cloudformationTemplates/arch_files/ec2.yaml
Parameters:
    region:
        Type: String
        Description: "This is to define AZ region"
    image:
        Type: String
        Description: "This is to define Image id"   
    instancetype:
        Type: String
        Description: "This is to instance type" 
    key:
        Type: String
        Description: "This is to key pair"         

Resources:
    FirstEc2:
        Type: AWS::EC2::Instance
        Properties: 
            AvailabilityZone: 
                !Ref region
            SecurityGroups: 
                -
                    !Ref SecuirtyGroup
            BlockDeviceMappings:
                -
                    DeviceName: /dev/xvda
                    Ebs: 
                        DeleteOnTermination: True                                                
                        VolumeSize: 8
                        VolumeType: gp2                   
            ImageId: 
                !Ref image
            InstanceType:
                !Ref instancetype
            KeyName:
                !Ref key

    SecuirtyGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: "This is security group by cloudformation"
            SecurityGroupIngress: 
                -
                    CidrIp: 0.0.0.0/0
                    FromPort: 22
                    ToPort: 22
                    IpProtocol: tcp
                -
                    CidrIp: 0.0.0.0/0
                    FromPort: 80
                    ToPort: 80 
                    IpProtocol: tcp
